--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,22 @@ cortex-m = "0.7"
 rtic-monotonic = "0.1.0-alpha.0"
 nrf52840-hal = "*"
 # nrf52840-pac = "*"
+
+[dev-dependencies]
+nrf52840-hal = "*"
+cortex-m-rtic = "0.6.0-alpha.2"
+defmt-rtt = "0.2.0"
+defmt = "0.2.2"
+panic-probe = "0.2.0"
+
+[features]
+# set logging levels here
+default = ["defmt-debug"] # "dependency-a/defmt-trace",
+
+# do NOT modify these features
+defmt-default = []
+defmt-trace = []
+defmt-debug = []
+defmt-info = []
+defmt-warn = []
+defmt-error = []
