--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
-name = "nrf_timer_monotonic"
-version = "0.1.0-alpha.0"
+name = "nrf-monotonic"
+version = "0.1.0"
 authors = [
   "Fabio Pungg <fabiopungg@gmail.com>",
 ]
+
+
+
 categories = ["concurrency", "embedded", "no-std"]
 description = "RTIC Monotonic implementation based on nrf timers"
 # documentation = "https://docs.rs/dwt-systick-monotonic"
@@ -12,7 +15,7 @@ license = "MIT OR Apache-2.0"
 edition = "2018"
 
 [lib]
-name = "nrf_timer_monotonic"
+name = "nrf_monotonic"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -22,21 +25,5 @@ rtic-monotonic = "0.1.0-alpha.0"
 nrf52840-hal = "*"
 # nrf52840-pac = "*"
 
-[dev-dependencies]
-nrf52840-hal = "*"
-cortex-m-rtic = "0.6.0-alpha.2"
-defmt-rtt = "0.2.0"
-defmt = "0.2.2"
-panic-probe = "0.2.0"
 
-[features]
-# set logging levels here
-default = ["defmt-debug"] # "dependency-a/defmt-trace",
 
-# do NOT modify these features
-defmt-default = []
-defmt-trace = []
-defmt-debug = []
-defmt-info = []
-defmt-warn = []
-defmt-error = []
