--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,7 @@
 [package]
 name = "nrf-monotonic"
 version = "0.1.0"
-authors = [
-  "Fabio Pungg <fabiopungg@gmail.com>",
-]
-
+authors = ["Fabio Pungg <fabiopungg@gmail.com>"]
 
 
 categories = ["concurrency", "embedded", "no-std"]
@@ -22,8 +19,34 @@ name = "nrf_monotonic"
 [dependencies]
 cortex-m = "0.7"
 rtic-monotonic = "0.1.0-alpha.0"
-nrf52840-hal = "*"
-# nrf52840-pac = "*"
 
 
+[dependencies.nrf52810-hal]
+version = "0.12.1"
+optional = true
 
+[dependencies.nrf52811-hal]
+version = "0.12.1"
+optional = true
+
+[dependencies.nrf52832-hal]
+version = "0.12.1"
+optional = true
+
+[dependencies.nrf52833-hal]
+version = "0.12.1"
+optional = true
+
+[dependencies.nrf52840-hal]
+version = "0.12.1"
+optional = true
+
+
+[features]
+52810 = ["nrf52810-hal"]
+52811 = ["nrf52811-hal"]
+52832 = ["nrf52832-hal"]
+52833 = ["nrf52833-hal"]
+52840 = ["nrf52840-hal"]
+
+default = ["52840"]
