--- a/examples/test-example/Cargo.toml
+++ b/examples/test-example/Cargo.toml
@@ -1,23 +1,47 @@
 [package]
 name = "test-example"
 version = "0.1.0"
-authors = ["Fabio Pungg <fabio.pungg@medel.com>"]
+authors = ["Fabio Pungg <fabiopungg@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-nrf52840-hal = "*"
 cortex-m = "0.7"
 cortex-m-rtic = "0.6.0-alpha.2"
 defmt-rtt = "0.2.0"
 defmt = "0.2.2"
 panic-probe = "0.2.0"
-nrf-monotonic = {version = "0.1.0", path = "../.."}
+nrf-monotonic = { version = "0.1.0", path = "../.." }
+
+[dependencies.nrf52810-hal]
+version = "0.12.1"
+optional = true
+[dependencies.nrf52811-hal]
+version = "0.12.1"
+optional = true
+[dependencies.nrf52832-hal]
+version = "0.12.1"
+optional = true
+[dependencies.nrf52833-hal]
+version = "0.12.1"
+optional = true
+[dependencies.nrf52840-hal]
+version = "0.12.1"
+optional = true
+
 
 [features]
+
+52810 = ["nrf52810-hal"]
+52811 = ["nrf52811-hal"]
+52832 = ["nrf52832-hal"]
+52833 = ["nrf52833-hal"]
+52840 = ["nrf52840-hal"]
+
+
 # set logging levels here
-default = ["defmt-debug"] # "dependency-a/defmt-trace",
+default = ["defmt-debug", "52840"] # "dependency-a/defmt-trace",
 
 # do NOT modify these features
 defmt-default = []
