fixed overflow handling

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,6 +1,6 @@
 # [target.'cfg(all(target_arch = "arm", target_os = "none"))']
 [target.thumbv7em-none-eabihf]
-runner = "probe-run --chip nrf52840 --shorten-paths"
+runner = "probe-run --chip nrf52840" # --shorten-paths"
 # runner =  "probe-rs-debugger debug --chip nRF52840_xxAA --speed 8000  --protocol swd --connect-under-reset  --core-index 0 --flashing-enabled --reset-after-flashing --halt-after-reset --program-binary"
 
 rustflags = [
