--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ name = "nrf_monotonic"
 
 [dependencies]
 cortex-m = "0.7.3"
-rtic-monotonic = "0.1.0-rc.1"
+rtic-monotonic = "0.1.0-rc.2"
+fugit = "0.3.0"
 
 [dependencies.defmt]
 version = "0.2.3"
