--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nrf-monotonic"
-version = "0.1.3"
+version = "0.1.4"
 authors = ["Fabio Pungg <fabiopungg@gmail.com>"]
 
 
@@ -17,11 +17,11 @@ name = "nrf_monotonic"
 
 [dependencies]
 cortex-m = "0.7.3"
-rtic-monotonic = "0.1.0-rc.2"
+rtic-monotonic = "1.0.0"
 fugit = "0.3.0"
 
 [dependencies.defmt]
-version = "0.2.3"
+version = "0.3.0"
 optional = true
 
 [dependencies.nrf52810-hal]
